[gd_scene load_steps=2 format=3 uid="uid://ci0lyi4ieonoi"]

[ext_resource type="Script" path="res://Utility/hurt_box.gd" id="1_oroh7"]

[node name="HurtBox" type="Area2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_oroh7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="cooldownTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="cooldownTimer" to="." method="_on_disable_timer_timeout"]
[connection signal="timeout" from="cooldownTimer" to="." method="_on_cooldown_timer_timeout"]
